--- a/index.html
+++ b/index.html
@@ -901,69 +901,71 @@
                 </ul>
             </nav>
             <div class="clearfix"></div>
-            <div class="footer_content container ">
-                <div class="footer_section_about">
-                    <div class="section_about_header">
-                        <h2>About</h2>
-                        <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
-                            Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
-                            Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
-                    </div>
-                    <div class="footer_section_active">
-                        <h2>Stay in touch</h2>
-                        <form action="" name="subscribe-form" class="subscribe-form">
-                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                            <button class="subscribe-button" type="submit">Subscribe</button>
-                        </form>
-                    </div>
-                </div> <!-- footer_section_about -->
-
-                <div class="footer_section_about">
-                    <div class="footer_section_box">
-                        <div class="section_box">
-                            <h3><a href="#">Ade books</a></h3>
-                            <p>Rare Books & Textbooks</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">DpReview</a></h3>
-                            <p>Digital Photography</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">Audible</a></h3>
-                            <p>Download Audio Books</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">Junglee</a></h3>
-                            <p>Shop Online in India</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">Look</a></h3>
-                            <p>Kids' Clothing & Shoes</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">MYHABIT</a></h3>
-                            <p>Private Fashion Designer
-                                Sales</p>
-                        </div>
-                    </div>
-                    <div class="footer_social">
-                        <h2>Follow us</h2>
-                        <div class="social_icon">
-                            <ul class="menu_social">
-                                <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
-                                <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
-                                <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
-                                <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> <!-- footer_section_about -->
-
-                <div class="footer_info">
-                    <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
-                    <p class="footer-info-right"></p>
+        <div class="footer_content container ">
+            <div class="section-left">
+                <div class="section_about_header">
+                    <h2>About</h2>
+                    <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
+                        Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
+                        Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
                 </div>
-            </div> <!-- end footer_content container-->
+                <div class="footer_section_box">
+                    <div class="section_box">
+                        <h3><a href="#">Ade books</a></h3>
+                        <p>Rare Books & Textbooks</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">DpReview</a></h3>
+                        <p>Digital Photography</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Audible</a></h3>
+                        <p>Download Audio Books</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Junglee</a></h3>
+                        <p>Shop Online in India</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">Look</a></h3>
+                        <p>Kids' Clothing & Shoes</p>
+                    </div>
+                    <div class="section_box">
+                        <h3><a href="#">MYHABIT</a></h3>
+                        <p>Private Fashion Designer
+                            Sales</p>
+                    </div>
+                </div>
+
+            </div> <!-- section-left -->
+
+            <div class="section-right">
+                <div class="footer_section_active">
+                    <h2>Stay in touch</h2>
+                    <form action="" name="subscribe-form" class="subscribe-form">
+                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                        <button class="subscribe-button" type="submit">Subscribe</button>
+                    </form>
+                </div>
+
+                <div class="footer_social">
+                    <h2>Follow us</h2>
+                    <div class="social_icon">
+                        <ul class="menu_social">
+                            <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
+                            <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div> <!-- section-right -->
+
+            <div class="footer_info">
+                <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
+                <p class="footer-info-right"></p>
+            </div>
+        </div> <!-- end footer_content container-->
         </section> <!-- wrap-footer -->
 </div>
 
