--- a/maps.html
+++ b/maps.html
@@ -66,23 +66,13 @@
             </nav>
             <div class="clearfix"></div>
             <div class="footer_content container ">
-                <div class="footer_section_about">
+                <div class="section-left">
                     <div class="section_about_header">
                         <h2>About</h2>
                         <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
                             Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
                             Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
                     </div>
-                    <div class="footer_section_active">
-                        <h2>Stay in touch</h2>
-                        <form action="" name="subscribe-form" class="subscribe-form">
-                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                            <button class="subscribe-button" type="submit">Subscribe</button>
-                        </form>
-                    </div>
-                </div> <!-- footer_section_about -->
-
-                <div class="footer_section_about">
                     <div class="footer_section_box">
                         <div class="section_box">
                             <h3><a href="#">Ade books</a></h3>
@@ -110,6 +100,18 @@
                                 Sales</p>
                         </div>
                     </div>
+
+                </div> <!-- section-left -->
+
+                <div class="section-right">
+                    <div class="footer_section_active">
+                        <h2>Stay in touch</h2>
+                        <form action="" name="subscribe-form" class="subscribe-form">
+                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                            <button class="subscribe-button" type="submit">Subscribe</button>
+                        </form>
+                    </div>
+
                     <div class="footer_social">
                         <h2>Follow us</h2>
                         <div class="social_icon">
@@ -121,7 +123,7 @@
                             </ul>
                         </div>
                     </div>
-                </div> <!-- footer_section_about -->
+                </div> <!-- section-right -->
 
                 <div class="footer_info">
                     <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
