fixed pages html menu js

--- a/cart.html
+++ b/cart.html
@@ -231,7 +231,7 @@
             </div>
     </div> <!-- end your cart -->
 
-    <div class="inner-footer">
+    <footer class="inner-footer">
         <section class="wrap-footer">
             <nav class="menu_futer container">
                 <ul>
@@ -309,7 +309,7 @@
                 </div>
             </div> <!-- end footer_content container-->
         </section> <!-- wrap-footer -->
-    </div>
+    </footer>
 
     <div class="inner-wrap-container">
         <div>
