fixed pages cart.html

--- a/cart.html
+++ b/cart.html
@@ -85,7 +85,7 @@
                             <div class="req-symbol">*</div>
                             <input required id="phone" type="phone" placeholder="Phone"  name="phone">
                             <label for="phone"></label>
-                            <span class="input-text-error">Phone cannot be blank.</span>
+                            <span class="input-text-error">Phone +38000000000</span>
                         </div>
                         <div class="clearfix"></div>
                     </div>
@@ -104,10 +104,10 @@
                         <div class="input-text">
                             <div>
                                 <select id="country" name="country" class="cs-select cs-skin-country" title="country">
-                                    <option value="ukraine" >Ukraine</option>
+                                    <option value="ukraine">Ukraine</option>
                                     <option value="russion">Russian Federation</option>
                                     <option value="belarus">Belarus</option>
-                                    <option value="kazakhstan" >Kazakhstan</option>
+                                    <option value="kazakhstan">Kazakhstan</option>
                                 </select>
                                 <label for="country"></label>
                             </div>
@@ -366,7 +366,7 @@
 
     <script src="js/menu.js"></script>
     <script src="js/popup.js"></script>
-    <script src="js/formcart.js"></script>
+    <script src="js/cart.js"></script>
 
 
 </body>
