add element orange to index.html for book-item

--- a/index.html
+++ b/index.html
@@ -323,9 +323,8 @@
             </div>
             <div class="book-item red-queen">
                 <a href="#">
-                    <img class="book-img relative" src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
-                </a>
-                <div class="style-cover-img">
+                    <img class="book-img relative " src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
+                    <div class="overlay">
                     <span class="inner-cover-img">
                     <a href="#" class="oval"><span class="glasses"></span></a>
                     <a href="#" class="oval-sm-left"><span class="flag"></span></a>
@@ -337,7 +336,9 @@
                     </a>
                     <a href="#" class="img-text">$12</a>
                     </span>
-                </div>
+                    </div>
+                </a>
+
                 <a class="book-title">English Detective Stories</a>
                 <a class="book-author">Patricia Craig</a>
             </div>
