--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div class="inner-container">
     <header class="wrap">
         <nav class="menu container">
-            <div class="menu_logo">
-            </div>
+            <a href="index.html" class="menu_logo">
+            </a>
             <div id="menu-all">
                 <ul class="menu_list">
                     <li><a href="#">Books</a></li>
@@ -31,7 +31,7 @@
                         <a href="" class="search"></a>
                     </li>
                     <li>
-                        <a href="" class="shoppingcart" ></a>
+                        <a href="cart2.html" class="shoppingcart" ></a>
                     </li>
                     <li>
                         <!--<div id="inner-userpic">-->
@@ -327,8 +327,8 @@
                     <div class="overlay">
                     <span class="inner-cover-img">
                     <a href="#" class="oval"><span class="glasses"></span></a>
-                    <a href="#" class="oval-sm-left"><span class="flag"></span></a>
-                    <a href="#" class="oval-sm-right">
+                    <a href="#" class="oval-left"><span class="flag"></span></a>
+                    <a href="#" class="oval-right">
                         <span class="basket">
                             <span class="shape7"></span>
                             <span class=" shape8"></span>
