--- a/article.html
+++ b/article.html
@@ -14,8 +14,8 @@
     <div class="inner-content">
         <header class="wrap">
             <nav class="menu container">
-                <div class="menu_logo">
-                </div>
+                <a href="index.html" class="menu_logo">
+                </a>
                 <div id="menu-all">
                     <ul class="menu_list">
                         <li><a href="#">Books</a></li>
@@ -29,7 +29,7 @@
                             <a href="" class="search"></a>
                         </li>
                         <li>
-                            <a href="" class="shoppingcart" ></a>
+                            <a href="cart2.html" class="shoppingcart" ></a>
                         </li>
                         <li>
                             <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
