fixed books index.html

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,8 @@
 <script>
     $(document).ready(function(){
         $('.slider-slick').slick({
-            prevArrow:'<button type="button" class="slick-prev"></button>'
+            prevArrow:'<button type="button" class="slick-prev"></button>',
+            nextArrow:'<button type="button" class="slick-next">rere</button>'
         });
     });
 </script>
